[gd_scene load_steps=18 format=4 uid="uid://mjro4wolswe5"]

[ext_resource type="Script" path="res://scenes/game_scenes/game_scene_dev.gd" id="1_aodx8"]
[ext_resource type="PackedScene" uid="uid://kjcwkplue3h6" path="res://scenes/game_scenes/prefabs/player.tscn" id="2_di5cs"]
[ext_resource type="PackedScene" uid="uid://bchg1u2vpawdl" path="res://scenes/game_scenes/prefabs/house.tscn" id="10_s0ksp"]
[ext_resource type="Resource" uid="uid://b63ccow78dhq2" path="res://scenes/game_scenes/dialogues/house.tres" id="11_58n7l"]
[ext_resource type="Script" path="res://scenes/game_scenes/exp_count.gd" id="13_glcna"]
[ext_resource type="Script" path="res://scenes/game_scenes/money.gd" id="14_hjmdp"]
[ext_resource type="Script" path="res://scenes/game_scenes/tenant.gd" id="14_nf0ku"]
[ext_resource type="Script" path="res://scenes/game_scenes/time.gd" id="14_yfr4n"]
[ext_resource type="Script" path="res://scripts/camera/camera_targeter.gd" id="15_lp3aw"]
[ext_resource type="Texture2D" uid="uid://bs5ru4bg8n3bj" path="res://sprites/tilesets/test-tileset.png" id="19_ax58t"]
[ext_resource type="PackedScene" uid="uid://bvqirlofwhl5g" path="res://scenes/game_scenes/prefabs/door.tscn" id="20_rp6dp"]
[ext_resource type="PackedScene" uid="uid://1ovtd7dawkr6" path="res://scenes/game_scenes/prefabs/dialog.tscn" id="23_11ufv"]
[ext_resource type="PackedScene" uid="uid://ghuvjtihmhxv" path="res://scenes/game_scenes/prefabs/character.tscn" id="24_34hmd"]
[ext_resource type="Theme" uid="uid://dc6c1peo4pfyr" path="res://addons/dialogue_nodes/themes/bubbly.theme" id="26_7egdx"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_p3djs"]
vertices = PackedVector2Array(-109, -1423, 1027, -1404, 1910, -629, 2329, 558, 907, 1529, -1430, 1047, -1195, -972)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1195, -972, -1430, 1047, 907, 1529, 2329, 558, 1910, -629, 1027, -1404, -109, -1423)])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ysn8p"]
texture = ExtResource("19_ax58t")
texture_region_size = Vector2i(8, 8)
1:0/0 = 0
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:0/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_mb1ej"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ysn8p")

[node name="game_scene_dev" type="Node2D"]
script = ExtResource("1_aodx8")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-203, -124)
navigation_polygon = SubResource("NavigationPolygon_p3djs")

[node name="Player" parent="." node_paths=PackedStringArray("dialog_control") instance=ExtResource("2_di5cs")]
dialog_control = NodePath("../CanvasLayer/Dialog")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1041, -299.75)
zoom = Vector2(0.1, 0.1)

[node name="CameraTargeter" type="Node" parent="Camera2D" node_paths=PackedStringArray("camera")]
script = ExtResource("15_lp3aw")
camera = NodePath("..")
min_zoom = 0.1
targets = Array[NodePath]([NodePath("../../Player"), NodePath("../../Door"), NodePath("../../Character"), NodePath("../../House")])

[node name="WallTileMap" type="TileMapLayer" parent="."]
scale = Vector2(20, 20)
tile_map_data = PackedByteArray("AAAAAPv/AAACAAAAAAAAAPr/AAACAAAAAAAAAPn/AAACAAAAAAAAAPj/AAACAAAAAAAAAPf/AAACAAAAAAAAAPb/AAACAAAAAAAAAPX/AAACAAAAAAAAAPT/AAACAAAAAAAAAP7/AAACAAAAAAAAAP//AAACAAAAAAAAAAAAAAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAMAAAACAAAAAAAAAAQAAAACAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAAAAAgAAAACAAAAAAAAAAkAAAACAAAAAAD///T/AAACAAAAAAD+//T/AAACAAAAAAD9//T/AAACAAAAAAD8//T/AAACAAAAAAD7//T/AAACAAAAAAD6//T/AAACAAAAAAD5//T/AAACAAAAAAD4//T/AAACAAAAAAD3//T/AAACAAAAAAD2//T/AAACAAAAAAD1//T/AAACAAAAAAD0//T/AAACAAAAAADz//T/AAACAAAAAADy//T/AAACAAAAAADx//T/AAACAAAAAADw//T/AAACAAAAAADv//T/AAACAAAAAADv//X/AAACAAAAAADv//b/AAACAAAAAADv//f/AAACAAAAAADv//j/AAACAAAAAADv//n/AAACAAAAAADv//r/AAACAAAAAADv//v/AAACAAAAAADv//z/AAACAAAAAADv//3/AAACAAAAAADv//7/AAACAAAAAADv////AAACAAAAAADv/wAAAAACAAAAAADv/wEAAAACAAAAAADv/wIAAAACAAAAAADv/wMAAAACAAAAAADv/wQAAAACAAAAAADv/wUAAAACAAAAAADv/wYAAAACAAAAAADv/wcAAAACAAAAAADv/wgAAAACAAAAAADv/wkAAAACAAAAAADw/wkAAAACAAAAAADx/wkAAAACAAAAAADy/wkAAAACAAAAAADz/wkAAAACAAAAAAD0/wkAAAACAAAAAAD1/wkAAAACAAAAAAD2/wkAAAACAAAAAAD3/wkAAAACAAAAAAD4/wkAAAACAAAAAAD5/wkAAAACAAAAAAD6/wkAAAACAAAAAAD7/wkAAAACAAAAAAD8/wkAAAACAAAAAAD9/wkAAAACAAAAAAD+/wkAAAACAAAAAAD//wkAAAACAAAAAAAAAPP/AAACAAAAAAAAAPL/AAACAAAAAAAAAPH/AAACAAAAAAAAAPD/AAACAAAAAAAAAO//AAACAAAAAAAAAO7/AAACAAAAAAAAAO3/AAACAAAAAAAAAOz/AAACAAAAAAAAAOv/AAACAAAAAAAAAOr/AAACAAAAAAAAAOn/AAACAAAAAAAAAOj/AAACAAAAAAABAOj/AAACAAAAAAACAOj/AAACAAAAAAADAOj/AAACAAAAAAAEAOj/AAACAAAAAAAFAOj/AAACAAAAAAAGAOj/AAACAAAAAAAHAOj/AAACAAAAAAAIAOj/AAACAAAAAAAJAOj/AAACAAAAAAAKAOj/AAACAAAAAAALAOj/AAACAAAAAAAMAOj/AAACAAAAAAANAOj/AAACAAAAAAAOAOj/AAACAAAAAAAPAOj/AAACAAAAAAAQAOj/AAACAAAAAAARAOj/AAACAAAAAAASAOj/AAACAAAAAAASAOn/AAACAAAAAAASAOr/AAACAAAAAAASAOv/AAACAAAAAAASAOz/AAACAAAAAAASAO3/AAACAAAAAAASAO7/AAACAAAAAAASAO//AAACAAAAAAASAPD/AAACAAAAAAASAPH/AAACAAAAAAASAPL/AAACAAAAAAASAPP/AAACAAAAAAASAPT/AAACAAAAAAASAPX/AAACAAAAAAASAPb/AAACAAAAAAASAPf/AAACAAAAAAASAPj/AAACAAAAAAASAPn/AAACAAAAAAASAPr/AAACAAAAAAASAPv/AAACAAAAAAASAPz/AAACAAAAAAASAP3/AAACAAAAAAASAP7/AAACAAAAAAASAP//AAACAAAAAAASAAAAAAACAAAAAAASAAEAAAACAAAAAAASAAIAAAACAAAAAAASAAMAAAACAAAAAAASAAQAAAACAAAAAAASAAUAAAACAAAAAAASAAYAAAACAAAAAAASAAcAAAACAAAAAAASAAgAAAACAAAAAAASAAkAAAACAAAAAAASAAoAAAACAAAAAAASAAsAAAACAAAAAAARAAsAAAACAAAAAAAQAAsAAAACAAAAAAAPAAsAAAACAAAAAAAOAAsAAAACAAAAAAANAAsAAAACAAAAAAAMAAsAAAACAAAAAAALAAsAAAACAAAAAAAKAAsAAAACAAAAAAAJAAsAAAACAAAAAAAIAAsAAAACAAAAAAAHAAsAAAACAAAAAAAGAAsAAAACAAAAAAAFAAsAAAACAAAAAAAEAAsAAAACAAAAAAADAAsAAAACAAAAAAACAAsAAAACAAAAAAABAAsAAAACAAAAAAAAAAsAAAACAAAAAAAAAAoAAAACAAAAAAA=")
tile_set = SubResource("TileSet_mb1ej")

[node name="Door" parent="." node_paths=PackedStringArray("dialog_control") instance=ExtResource("20_rp6dp")]
position = Vector2(74, -478)
scale = Vector2(1.68, 1.68)
dialog_control = NodePath("../CanvasLayer/Dialog")

[node name="Character" parent="." node_paths=PackedStringArray("dialog_control") instance=ExtResource("24_34hmd")]
position = Vector2(1623, 294)
dialog_control = NodePath("../CanvasLayer/Dialog")

[node name="House" parent="." node_paths=PackedStringArray("dialog_control", "money_label") instance=ExtResource("10_s0ksp")]
position = Vector2(1774, -988)
dialog_control = NodePath("../CanvasLayer/Dialog")
dialog_data = ExtResource("11_58n7l")
money_label = NodePath("../CanvasLayer/Money")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialog" parent="CanvasLayer" instance=ExtResource("23_11ufv")]
offset_left = 57.0
offset_top = -196.0
offset_right = 1112.0
offset_bottom = -46.0
theme = ExtResource("26_7egdx")

[node name="ExpCount" type="Label" parent="CanvasLayer" node_paths=PackedStringArray("dialog_control")]
offset_right = 40.0
offset_bottom = 23.0
text = "EXP: 0"
script = ExtResource("13_glcna")
dialog_control = NodePath("../Dialog")

[node name="Money" type="Label" parent="CanvasLayer" node_paths=PackedStringArray("tenant_label")]
offset_left = -1.0
offset_top = 28.0
offset_right = 56.0
offset_bottom = 51.0
text = "Money: 0"
script = ExtResource("14_hjmdp")
tenant_label = NodePath("../Tenant")

[node name="Tenant" type="Label" parent="CanvasLayer"]
offset_top = 55.0
offset_right = 72.0
offset_bottom = 78.0
text = "Tenant: 0"
script = ExtResource("14_nf0ku")

[node name="Time" type="Label" parent="CanvasLayer"]
offset_top = 83.0
offset_right = 40.0
offset_bottom = 106.0
text = "Time: "
script = ExtResource("14_yfr4n")

[connection signal="experience_cut" from="CanvasLayer/Dialog" to="CanvasLayer/ExpCount" method="_on_dialog_experience_cut"]
[connection signal="on_buy_house" from="CanvasLayer/Dialog" to="House" method="_on_dialog_on_buy_house"]
[connection signal="on_success_rent" from="CanvasLayer/Dialog" to="CanvasLayer/ExpCount" method="_on_dialog_on_success"]
[connection signal="on_success_rent" from="CanvasLayer/Dialog" to="CanvasLayer/Tenant" method="_on_dialog_on_success"]
[connection signal="on_exp_cut" from="CanvasLayer/ExpCount" to="CanvasLayer/Tenant" method="_on_exp_count_on_exp_cut"]
[connection signal="on_new_month" from="CanvasLayer/Time" to="CanvasLayer/Money" method="_on_time_on_new_month"]
